hard-gists/1327072/run.log
=== Docker Run Log for 1327072 ===
Started at: Mi 29. Okt 12:07:26 CET 2025

[2025-10-29 12:07:27] START: Running container for 1327072
[2025-10-29 12:07:27] SUCCESS: Container a64755240100fb34d95ce3ea77b7afd8af4ecc606abea64908777527535e6573 started for 1327072
=== Container logs for 1327072 ===
  File "/snippet.py", line 18
    raise ImproperlyConfigured, "Cannot find GnuPG binary at %s" % GPG_BIN
                              ^
SyntaxError: invalid syntax
=== End of logs for 1327072 ===
[2025-10-29 12:07:29] INFO: Container a64755240100fb34d95ce3ea77b7afd8af4ecc606abea64908777527535e6573 has stopped
